Clamp raise amount to avoid overflow

--- a/docs/mainCss.css
+++ b/docs/mainCss.css
@@ -4,8 +4,7 @@
 #title-page{
   display: block;
   color: #f1f1f1;
-  /* font-size: 1.5em; */
-  font-size: clamp(1em, 2.5vw, 1.5em);
+  font-size: clamp(1em, 2.5vw, 1.25em);
 }
 #title{ /* title styling */
   text-shadow:0.1em 0.1em 0.1em #1c05a0, 0px -0.1em 0.1em #043988;
@@ -13,7 +12,7 @@
   color:#a09bdd;
   font-family: "Press Start 2P", "consolas", sans-serif;
   /* font-size: 4em; */
-  font-size: clamp(2em, 5vw, 4em);
+  font-size: clamp(2em, 3.5vw, 4em);
   letter-spacing: 4px;
 }
 .fa-youtube{
